--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "mkdirp": "^0.5.1",
     "pako": "^1.0.8",
     "postcss-loader": "^3.0.0",
+    "postcss-preset-env": "^6.7.0",
     "prettier": "^1.18.2",
     "query-string": "^6.2.0",
     "rimraf": "^2.6.3",
