--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "mini-css-extract-plugin": "^0.9.0",
     "mkdirp": "^1.0.4",
     "pako": "^1.0.8",
+    "pnp-webpack-plugin": "^1.6.4",
     "postcss-loader": "^3.0.0",
     "prettier": "^2.0.5",
     "query-string": "^6.2.0",
