--- a/website/package.json
+++ b/website/package.json
@@ -11,5 +11,9 @@
     "fs-extra": "^9.0.1",
     "react": "^16.8.4"
   },
-  "dependencies": {}
+  "dependenciesMeta": {
+    "docusaurus": {
+      "unplugged": true
+    }
+  }
 }
