--- a/.gitignore
+++ b/.gitignore
@@ -19,6 +19,7 @@ coverage/
 docs/cli.md
 lib/core/metadata.js
 lib/core/MetadataBlog.js
+website/prev-versions.json
 website/translated_docs
 website/build/
 website/yarn.lock
