--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "katex",
-  "version": "0.12.1-pre",
+  "version": "0.0.0-development",
   "description": "Fast math typesetting for the web.",
   "main": "dist/katex.js",
   "homepage": "https://katex.org",
   "repository": {
     "type": "git",
-    "url": "git://github.com/KaTeX/KaTeX.git"
+    "url": "https://github.com/KaTeX/KaTeX.git"
   },
   "files": [
     "katex.js",
@@ -24,6 +24,8 @@
     "@babel/preset-flow": "^7.0.0",
     "@babel/register": "^7.0.0",
     "@babel/runtime": "^7.3.1",
+    "@semantic-release/changelog": "^5.0.1",
+    "@semantic-release/git": "^9.0.0",
     "babel-eslint": "^10.0.1",
     "babel-jest": "^24.1.0",
     "babel-loader": "^8.0.5",
@@ -64,6 +66,7 @@
     "rollup-plugin-alias": "^1.5.1",
     "rollup-plugin-babel": "^4.3.2",
     "selenium-webdriver": "^3.6.0",
+    "semantic-release": "^17.1.1",
     "sri-toolbox": "^0.2.0",
     "style-loader": "^0.23.1",
     "stylelint": "^9.10.1",
@@ -94,7 +97,9 @@
     "analyze": "webpack --config webpack.analyze.js",
     "build": "rimraf dist/ && mkdirp dist && cp README.md dist && rollup -c && webpack",
     "watch": "yarn build --watch",
-    "dist": "yarn test && yarn build && yarn dist:zip",
+    "postversion": "yarn dist && node update-sri.js package README.md contrib/*/README.md docs/*.md website/pages/index.html",
+    "semantic-release": "semantic-release",
+    "dist": "yarn build && yarn dist:zip",
     "dist:zip": "rimraf katex/ katex.tar.gz katex.zip && cp -R dist katex && tar czf katex.tar.gz katex && zip -rq katex.zip katex && rimraf katex/"
   },
   "dependencies": {
