--- a/.releaserc
+++ b/.releaserc
@@ -1,8 +1,10 @@
 {
   "plugins": [
     ["@semantic-release/commit-analyzer", {
-      {breaking: true, release: 'minor'},
-      {type: 'feat', release: 'patch'},
+      "releaseRules": [
+        {breaking: true, release: 'minor'},
+        {type: 'feat', release: 'patch'},
+      ],
     }],
     "@semantic-release/release-notes-generator",
     ["@semantic-release/changelog", {
@@ -11,13 +13,13 @@
     "@semantic-release/npm",
     ["@semantic-release/git", {
       "assets": ["dist", "docs", "package.json", "CHANGELOG.md", "README.md", "contrib/*/README.md", "website/pages/index.html"],
-      "message": "chore(release): ${nextRelease.version} [ci skip]\n\n${nextRelease.notes}"
+      "message": "chore(release): ${nextRelease.version} [ci skip]\n\n${nextRelease.notes}",
     }],
     ["@semantic-release/github", {
       "assets": [
         {path: 'katex.tar.gz', label: 'tarball'},
         {path: 'katex.zip', label: 'zip'},
-      ]
+      ],
     }],
   ],
 }
